# matt2

./: _clang-format  build_env.h  console.h  daily_chess_scoring.cpp  daily_chess_scoring.h  game.cpp  game.h  matt2.cpp  move.cpp  move.h  notation.cpp  notation.h  piece.cpp  piece.h  piece_value_scoring.cpp  piece_value_scoring.h  placement.h  position.cpp  position.h  relocation.h  rules.cpp  rules.h  scoring.cpp  scoring.h  square.cpp  square.h  todo.txt
cli/: cli_chess.cpp
cli/project/vs/: cli_chess.vcxproj  cli_chess.vcxproj.filters
project/emscripten/: CMakeLists.txt  CMakeSettings.json
project/vs/: matt2.sln  matt2.vcxproj  matt2.vcxproj.filters
tests/: daily_chess_scoring_tests.cpp  daily_chess_scoring_tests.h  game_tests.cpp  game_tests.h  main.cpp  micro_benchmark.h  move_tests.cpp  move_tests.h  notation_tests.cpp  notation_tests.h  piece_tests.cpp  piece_tests.h  piece_value_scoring_tests.cpp  piece_value_scoring_tests.h  placement_tests.cpp  placement_tests.h  position_tests.cpp  position_tests.h  relocation_tests.cpp  relocation_tests.h  rules_tests.cpp  rules_tests.h  scoring_tests.cpp  scoring_tests.h  square_tests.cpp  square_tests.h  test_util.cpp  test_util.h
tests/project/vs/: matt2_tests.vcxproj  matt2_tests.vcxproj.filters
